# notebooklm-mcp-2026

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml  smithery.yaml
.claude/commands/: cleanup-branches.md  release.md  sync-docs.md
.github/: CODEOWNERS  FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml
examples/: basic_workflow.py  follow_up_conversation.py
src/notebook_julian/: __init__.py  auth.py  client.py  config.py  protocol.py  server.py
src/notebook_julian/tools/: __init__.py  auth_tools.py  query.py  sources.py
src/notebooklm_mcp_2026/: __init__.py  __main__.py  auth.py  cli.py  client.py  config.py  server.py
src/notebooklm_mcp_2026/tools/: __init__.py  auth_tools.py  notebooks.py  query.py  sources.py
tests/: conftest.py  test_auth.py  test_cli.py  test_client.py  test_integration.py  test_protocol.py  test_tools.py
