[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "notebooklm-mcp-2026"
version = "0.2.0"
description = "Secure MCP server for querying Google NotebookLM notebooks"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Julian" },
]
keywords = ["mcp", "notebooklm", "google", "ai", "context"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "fastmcp>=2.0.0",
    "httpx>=0.27.0",
    "websocket-client>=1.6.0",
    "platformdirs>=4.0.0",
    "rich>=13.0.0",
    "questionary>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/julianoczkowski/notebooklm-mcp-2026"
Repository = "https://github.com/julianoczkowski/notebooklm-mcp-2026"
Issues = "https://github.com/julianoczkowski/notebooklm-mcp-2026/issues"
Changelog = "https://github.com/julianoczkowski/notebooklm-mcp-2026/blob/master/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
notebooklm-mcp-2026 = "notebooklm_mcp_2026.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/notebooklm_mcp_2026"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "chrome: tests that require Google Chrome (skipped in CI)",
    "integration: integration tests using FastMCP Client",
]
asyncio_mode = "auto"
